...
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="yy6-kQ-2BZ">
                                        <rect key="frame" x="16" y="282" width="295" height="263"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="メールアドレス" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zMl-UO-xdC">
                                                <rect key="frame" x="0.0" y="0.0" width="295" height="40"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="xm9-mm-cPz"/>
                                                </constraints>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="パスワード" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Uk-iI-d8U">
                                                <rect key="frame" x="0.0" y="52" width="295" height="40"/>
                                                <accessibility key="accessibilityConfiguration" identifier="text"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="Lqq-HI-jn3"/>
                                                </constraints>
                                                <nil key="textColor"/>
...
                                                    <action selector="forgotPassClicked:" destination="7Z0-b0-Nhc" eventType="touchUpInside" id="VjM-H8-Zd8"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="88W-rn-8rk" customClass="RoundedButton" customModule="Aretct" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="130" width="295" height="40"/>
                                                <color key="backgroundColor" red="1" green="0.36078431372549019" blue="0.36078431372549019" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="loginBtn"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="tyu-zm-jIM"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                <state key="normal" title="ログイン">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <segue destination="6Ws-P2-txh" kind="show" identifier="ToRegisterAccount" id="X7x-AU-tOJ"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wAp-xk-aIJ">
                                                <rect key="frame" x="0.0" y="234" width="295" height="29"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <state key="normal" title="ログインせずに使う">
                                                    <color key="titleColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                </state>
                                                <connections>
                                                    <action selector="guestClicked:" destination="7Z0-b0-Nhc" eventType="touchUpInside" id="cXY-ch-VSw"/>
                                                </connections>
                                            </button>
...
